--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -64,8 +64,8 @@ jobs:
       - name: Build devcontainer
         uses: devcontainers/ci@a56d055efecd725e8cfe370543b6071b79989cc8
         with:
-          imageName: ghcr.io/${{ github.repository_owner }}/devcontainer
-          cacheFrom: ghcr.io/${{ github.repository_owner }}/devcontainer
+          imageName: ghcr.io/ajlabdocker/devcontainer
+          cacheFrom: ghcr.io/ajlabdocker/devcontainer
           subFolder: src/devcontainer
           platform: linux/amd64
           push: always
