added terrascan version to resolve build failures

--- a/src/devcontainer/.devcontainer/devcontainer.json
+++ b/src/devcontainer/.devcontainer/devcontainer.json
@@ -105,7 +105,7 @@
     "ghcr.io/devcontainers-contrib/features/qrcode": {},
     "ghcr.io/devcontainers-contrib/features/shfmt": {},
     "ghcr.io/devcontainers-contrib/features/terraform-docs": {},
-    "ghcr.io/devcontainers-contrib/features/terrascan": {},
+    "ghcr.io/devcontainers-contrib/features/terrascan:1.0.1": {},
     "ghcr.io/devcontainers-contrib/features/tmux-apt-get": {},
     "ghcr.io/devcontainers-contrib/features/vscode-cli": {},
     "ghcr.io/devcontainers-contrib/features/vscode-server": {},
