--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -58,14 +58,14 @@ jobs:
         uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567
         with:
           registry: "ghcr.io"
-          username: ajlab-gh
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build devcontainer
         uses: devcontainers/ci@a56d055efecd725e8cfe370543b6071b79989cc8
         with:
-          imageName: ghcr.io/ajlab-gh/devcontainer
-          cacheFrom: ghcr.io/ajlab-gh/devcontainer
+          imageName: ghcr.io/${{ github.repository_owner }}/devcontainer
+          #cacheFrom: ghcr.io/${{ github.repository_owner }}/devcontainer
           subFolder: src/devcontainer
           platform: linux/amd64
           push: always
